fix: 키 파일 읽기 변경